[package]
name = "seed-utils"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "seed_utils"
path = "src/lib.rs"

[[bin]]
name = "bin"
path = "src/bin/bin.rs"

[dependencies]
bip85 = "0.1.1"
clap = "2.33.3"
rand = "0.8.4"
seed-xor = "1.0.0"
xyzpub = "0.2.1"
